--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "http2"]
 	path = http2
-	url = git@github.com:stephenlb/http2-proxy.git
+	url = https://github.com/stephenlb/http2-proxy.git
